Update Java version and fix list access for game mechanics
Update project to Java 19 and change List.getFirst() calls to List.get(0) in Game.java and Modifications.java for compatibility.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: e908ce0e-6ec1-4e08-be4f-eadb27ccffb7
Replit-Commit-Checkpoint-Type: intermediate_checkpoint